src/objects/integrator_da__Celigo_Queued_Message__c.object
<CustomObject>
    <fields>
        <fullName>integrator_da__Attempt_Count__c</fullName>
        <label>Attempt Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>integrator_da__Dead_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dead Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>integrator_da__Next_Run_Date_Time__c</fullName>
        <formula>IF(integrator_da__Attempt_Count__c == 0, CreatedDate, CreatedDate  + ((2 ^ integrator_da__Attempt_Count__c) / 24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Run Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>integrator_da__Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>integrator_da__Real_Time_Sync__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Real Time Sync</label>
        <referenceTo>integrator_da__Real_Time_Sync__c</referenceTo>
        <relationshipLabel>Celigo Queued Messages</relationshipLabel>
        <relationshipName>Celigo_Queued_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>integrator_da__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Celigo Queued Message</label>
    <listViews>
        <fullName>integrator_da__ALl_Lists</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>ALl Lists</label>
    </listViews>
    <listViews>
        <fullName>integrator_da__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CQM-{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Celigo Queued Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>